2.1.0/_sources/gallery/text_labels_and_annotations/text_fontdict.rst.txt


.. _sphx_glr_gallery_text_labels_and_annotations_text_fontdict.py:


=======================================================
Controlling style of text and labels using a dictionary
=======================================================

This example shows how to share parameters across many text objects and labels
by creating a dictionary of options passed across several functions.




.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_text_fontdict_001.png
    :align: center





.. code-block:: python


    import numpy as np
    import matplotlib.pyplot as plt


    font = {'family': 'serif',
            'color':  'darkred',
            'weight': 'normal',
            'size': 16,
            }

    x = np.linspace(0.0, 5.0, 100)
    y = np.cos(2*np.pi*x) * np.exp(-x)

    plt.plot(x, y, 'k')
    plt.title('Damped exponential decay', fontdict=font)
    plt.text(2, 0.65, r'$\cos(2 \pi t) \exp(-t)$', fontdict=font)
    plt.xlabel('time (s)', fontdict=font)
    plt.ylabel('voltage (mV)', fontdict=font)

    # Tweak spacing to prevent clipping of ylabel
    plt.subplots_adjust(left=0.15)
    plt.show()

**Total running time of the script:** ( 0 minutes  0.018 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: text_fontdict.py <text_fontdict.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: text_fontdict.ipynb <text_fontdict.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
